# raikura

./: pyproject.toml  setup.py
.github/workflows/: pypi.yml
example/: Guide_1.md  Guide_10.md  Guide_11.md  Guide_12.md  Guide_13.md  Guide_2.md  Guide_3.md  Guide_4.py  Guide_5.md  Guide_6.md  Guide_7.md  Guide_8.md  Guide_9.md  example.py  nlp.py
