# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raikura"
version = "0.1.0"
description = "The most advanced modular machine learning library in Python"
readme = "README.md"
authors = [
  { name="Naitik Gupta", email="hylendust@gmail.com" }
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "torch",
  "transformers",
  "joblib",
  "shap",
  "fastapi",
  "uvicorn",
  "pyyaml",
  "matplotlib",
  "xgboost",
  "lightgbm",
  "prophet",
  "psutil"
]

[project.urls]
"Homepage" = "https://github.com/orgs/RaykenAI/raikura"
"Documentation" = "https://github.com/orgs/RaykenAI/raikura#readme"
"Source" = "https://github.com/orgs/RaykenAI/raikura"

# setup.cfg (optional, helps PyPI metadata)
[metadata]
name = raikura
description = The most advanced modular machine learning library in Python
long_description = file: README.md
long_description_content_type = text/markdown
author = Naitik Gupta
author_email = hylendust@gmail.com
url = https://github.com/orgs/RaykenAI/raikura
license = MIT

[options]
packages = find:
include_package_data = True
python_requires = >=3.8

# MANIFEST.in
include README.md
include LICENSE
recursive-include raikura *
recursive-include tests *
